[package]
name = "ips_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
btleplug = { version = "0.10", features = ["serde"] }
rumqttc = "0.24.0"
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = "1.8.0"
futures = "0.3.30"